oih corporate design

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,10 @@
 <footer>
     <span class="copyright">
         {{ with .Site.Copyright | default "&copy;" }} {{ . | safeHTML }} {{ now.Format "2006"}} {{ end }}
-        <a href="https://github.com/aanupam23/hugo-sugoi" title="hugo-sugoi" alt="hugo-sugoi" target="_blank">Hugo-Sugoi</a>
+        Otto-Intze-Haus e.V. –
+        Rütscher Str. 175 –
+        52072 Aachen –
+        <a href="mailto:info@oih.ac">info@oih.ac</a> –
+        <a href="https://github.com/oih/theme">Website theme</a> based on <a href="https://github.com/aanupam23/hugo-sugoi" title="hugo-sugoi" alt="hugo-sugoi" target="_blank">Hugo-Sugoi</a>
     </span>
 </footer>
